refactor: 응답에 장소 태그 필드 추가